<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sqlite_title"
            android:textColor="@color/text_white_color"
            android:textSize="@dimen/text_size_18" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sqlite_name"
                    android:textSize="@dimen/text_size_15" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sqlite_age"
                    android:textSize="@dimen/text_size_15" />

                <EditText
                    android:id="@+id/et_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_14"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sqlite_sex"
                    android:textSize="@dimen/text_size_15" />

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sqlite_man"
                        android:textColor="@color/text_normal_color"
                        android:textSize="@dimen/text_size_14" />

                    <RadioButton
                        android:id="@+id/rb_woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:text="@string/sqlite_woman"
                        android:textColor="@color/text_normal_color"
                        android:textSize="@dimen/text_size_14" />

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/line_color" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_20"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_insert"
                    android:layout_width="@dimen/margin_0"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sqlite_insert"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/text_size_16" />


                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sqlite_delete"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sqlite_update"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/text_size_16" />

                <Button
                    android:id="@+id/btn_query"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sqlite_query"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/text_size_16" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/line_color" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_20" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>